--- a/bai7_spring_data_repository/exercise/blog/src/main/resources/templates/blog/list.html
+++ b/bai7_spring_data_repository/exercise/blog/src/main/resources/templates/blog/list.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 <a href="/create">Create new blog</a>
@@ -11,7 +13,7 @@
     <input name="search" type="text"/>
     <input type="submit" value="Search"/>
 </form>
-<table border="1">
+<table class="table table-dark table-striped">
     <tr>
         <th>Id</th>
         <th>Title</th>
@@ -30,8 +32,14 @@
             <td th:text="${blog.author}"></td>
             <td th:if="${blog.category}" th:text="${blog.category.name}"></td>
             <td th:text="${blog.date}"></td>
-            <td><a th:href="@{/edit/__${blog.id}__}">Edit</a></td>
-            <td><a th:href="@{/delete/__${blog.id}__}">Delete</a></td>
+            <td><a th:href="@{/edit/__${blog.id}__}" class="btn btn-primary">Edit</a></td>
+            <td>
+                <button type="button" class="btn btn-danger buttonDelete" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal" th:data1="${blog.id}" th:data2="${blog.id}"
+                        onclick="del(this.getAttribute('data1'),this.getAttribute('data2'))">
+                    Delete
+                </button>
+            </td>
         </tr>
     </th:block>
 </table>
@@ -40,5 +48,40 @@
     <span th:text="${blogs.number + 1}"></span>/<span th:text="${blogs.totalPages}"></span>
     <a th:href="@{'/blogs'(page=${blogs.number + 1})}" th:if="${blogs.hasNext()}">Next</a>
 </div>
+
+<!-- Button trigger modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form action="/delete" method="post">
+                    <input type="hidden" id="blogId" name="id" readonly>
+                    <p id="blogId2"></p>
+                    <p id="blogTitle"></p>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary"> Delete</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    function del(id, name) {
+        document.getElementById("blogId").value = id;
+        console.log(id)
+        document.getElementById("blogTitle").innerText = name;
+        document.getElementById("blogId2").innerText = id;
+    }
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
