--- a/bai6_jpa/exercise/blog/src/main/resources/templates/blog/edit.html
+++ b/bai6_jpa/exercise/blog/src/main/resources/templates/blog/edit.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Create customer</title>
+    <title>Create Blog</title>
 </head>
 <body>
 <h1>Create customer</h1>
