--- a/bai6_jpa/exercise/blog/src/main/resources/templates/blog/list.html
+++ b/bai6_jpa/exercise/blog/src/main/resources/templates/blog/list.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<a href="/create">Create new customer</a>
+<a href="/create">Create new blog</a>
 <h1>Customers</h1>
 <table border="1">
     <tr>
