--- a/case_study/src/main/resources/templates/customer/detail.html
+++ b/case_study/src/main/resources/templates/customer/detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -7,84 +7,77 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-<h1 class="d-flex justify-content-center">Create customer</h1>
+
+<div>
+    <h1 class="d-flex justify-content-center">Detail customer</h1>
+</div>
 <div class="d-flex justify-content-center">
-    <form th:action="@{/customer/create-customer}" th:object="${customerDto}" method="post">
-        <input type="hidden" th:field="*{customerId}">
+    <form th:action="@{/customer/detail-customer}"  method="post">
+        <input type="hidden" th:field="*{customer.customerId}">
 
         <div class="form-group row mt-3">
             <label for="inputName" class="col-sm-3 col-form-label">Name</label>
             <div class="col-sm-6">
-                <input type="text" class="form-control" id="inputName" th:field="*{customerName}" style="width: 280px">
-                <small style="color: red"  th:errors="*{customerName}"></small>
+                <label  class="form-control" id="inputName" th:text="${customer.customerName}" style="width: 280px"></label>
             </div>
         </div>
 
         <div class="form-group row mt-3">
             <label for="inputDate" class="col-sm-3 col-form-label">BirthDay</label>
             <div class="col-sm-6">
-                <input type="date" class="form-control" id="inputDate" th:field="*{customerBirth}" style="width: 280px">
-                <small  style="color: red"  th:errors="*{customerBirth}" ></small>
+                <label  class="form-control" id="inputDate" th:text="${customer.customerBirth}" style="width: 280px"></label>
             </div>
         </div>
 
         <div class="form-group row mt-3">
             <label class="col-sm-3 col-form-label">Gender</label>
             <div class="col-sm-8">
-                <input type="radio" th:field="*{customerGender}" value="nam"><label th:text="Nam" style="width: 70px"></label>
-                <input type="radio" th:field="*{customerGender}" value="nu"><label th:text="Nu" style="width: 90px"></label>
-                <input type="radio" th:field="*{customerGender}" value="khac"><label th:text="Khac" ></label>
+                <label  class="form-control"  th:text="${customer.customerGender}" style="width: 280px"></label>
+
             </div>
         </div>
 
         <div class="form-group row mt-3">
             <label for="inputIdCard" class="col-sm-3 col-form-label">Id card</label>
             <div class="col-sm-6">
-                <input type="text" class="form-control" id="inputIdCard" th:field="*{customerIdCard}" style="width: 280px">
-                <small style="color: red"  th:errors="*{customerIdCard}"></small>
+                <label  class="form-control" id="inputIdCard" th:text="${customer.customerIdCard}" style="width: 280px"></label>
             </div>
         </div>
 
         <div class="form-group row mt-3">
             <label for="inputPhone" class="col-sm-3 col-form-label">Phone Number</label>
             <div class="col-sm-6">
-                <input type="text" class="form-control" id="inputPhone" th:field="*{customerPhone}" style="width: 280px">
-                <small style="color: red"  th:errors="*{customerPhone}"></small>
+                <label class="form-control" id="inputPhone" th:text="${customer.customerPhone}" style="width: 280px"></label>
             </div>
         </div>
 
         <div class="form-group row mt-3">
             <label for="inputEmail" class="col-sm-3 col-form-label">Email</label>
             <div class="col-sm-6">
-                <input type="text" class="form-control" id="inputEmail" th:field="*{customerEmail}" style="width: 280px">
-                <small style="color: red"  th:errors="*{customerEmail}"></small>
+                <label  class="form-control" id="inputEmail" th:text="${customer.customerEmail}" style="width: 280px"></label>
             </div>
         </div>
 
         <div class="form-group row mt-3">
             <label for="inputAddress" class="col-sm-3 col-form-label">Address</label>
             <div class="col-sm-6">
-                <input type="text" class="form-control" id="inputAddress" th:field="*{customerAddress}" style="width: 280px">
-                <small style="color: red"  th:errors="*{customerAddress}"></small>
+                <label  class="form-control" id="inputAddress" th:text="${customer.customerAddress}" style="width: 280px"></label>
             </div>
         </div>
 
         <div class="form-group row mt-3">
             <label for="inputType" class="col-sm-3 col-form-label">Type customer</label>
             <div class="col-sm-6">
-                <select id="inputType" th:field="*{customerTypeId}">
-                    <option th:each="customerTypeId :${customerType}" th:value="${customerTypeId.customerTypeId}"
-                            th:text="${customerTypeId.customerTypeName}"></option>
-                </select>
+                <label  class="form-control" id="inputType" th:text="${customer.customerTypeId.customerTypeName}" style="width: 280px"></label>
             </div>
         </div>
 
         <div class="modal-footer">
-            <button type="submit" class="btn btn-primary"> Create Create</button>
             <a href="/customer" class="btn btn-secondary" data-bs-dismiss="modal">Back to list</a>
         </div>
     </form>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
